scope api
