# docs/api/api.yaml
@@ -19,8 +19,10 @@ paths:
     get:
       operationId: "get-key"
       description: |
-        Return the server's key.
-        This key can be used either for decrypting messages or verifying signatures
+        Return the current server's key.
+        This key can be used for:
+          - decrypting messages
+          - verifying signatures
       responses:
         200:
           description: Success
@@ -45,6 +47,20 @@ paths:
       tags:
         - Security
 
+  /v1/scopes:
+    get:
+      operationId: "search-scopes"
+      description: |
+        Return all the security scopes
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchScopeResponse'
+      tags:
+        - Security
 
 components:
   schemas:
@@ -72,3 +88,29 @@ components:
         content:
           type: string
           description: Content of the key, based-64 encoded
+
+
+    SearchScopeResponse:
+      type: object
+      properties:
+        scopes:
+          type: array
+          items:
+            $ref: "#/components/schemas/Scope"
+    Scope:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: ID of the scope
+        name:
+          type: string
+          description: Name of the scope
+        description:
+          type: string
+          description: Description of the scope
+          nullable: true
+        securityLevel:
+          type: integer
+          description: Security Level required to get this scope
