# src/main/kotlin/com/wutsi/platform/security/dto/SearchScopeResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.security.dto
+
+import kotlin.collections.List
+
+public data class SearchScopeResponse(
+    public val scopes: List<Scope> = emptyList()
+)
